# ft_vox

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
include/: Application.hpp  Display.hpp  Events.hpp  Matrix.hpp  Texture.hpp  chunk.hpp  debugGL.hpp  debug_gl.hpp  glmCombine.hpp  openglInputs.hpp  shader.h  shader_utils.h  vox.hpp
include/Renderer/: Entity.hpp  Master.hpp  Quad.hpp  Simple.hpp
include/Shader/: Shader.hpp  ShaderLoader.hpp  SimpleShader.hpp
include/States/: GameState.hpp  Playing.hpp
libs/glad/: Makefile
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/stb_image/: stb_image_helper.cpp
res/models/: coin.mtl
res/shaders/: light_fragment.glsl  light_vertex.glsl  skybox_vert.glsl  stand_fragment.glsl  stand_vertex.glsl
resources/Twi/: Twilight_Idle.FBX  Twilight_JumpEnd.FBX  Twilight_JumpLoop.FBX  Twilight_JumpStart.FBX  Twilight_Run.FBX  Twilight_Walk.FBX
resources/aya/: 091_W_Aya_100K.mtl  091_W_Aya_30K.mtl
resources/docs/: Intra Projects ft_vox Edit.htm
shaders/: SimpleFragment.glsl  SimpleVertex.glsl  fragment.glsl  vertex.glsl
src/: Animation.cpp  Animation.h  AnimationKey.cpp  AnimationKey.h  Animator.cpp  Animator.h  Camera.cpp  Entity.cpp  Entity.h  Events.cpp  Events.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Render.cpp  Render.h  Resources.cpp  Resources.h  Shader.cpp  Shader.h  camera.h  engine.cpp  engine.h  main.cpp  maths.cpp  maths.h  sandbox.cpp  sandbox.h  scene.cpp  scene.h  skybox.cpp  skybox.h
src/Debug/: DebugGl.cpp  DebugGl.h
src/PerlinNoise/: PerlinNoise.cpp  PerlinNoise.h
src/Utils/: AtlasSlicer.cpp  AtlasSlicer.h
src/VertexBuffer/: Vertex.cpp  Vertex.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBuffersLayout.cpp  VertexBuffersLayout.h
src/World/: Block.cpp  Block.h  Chunk.cpp  Chunk.h  Quad.cpp  Quad.h  World.cpp  World.h
src/World1/: Block.cpp  Block.hpp  Chunk.cpp  Chunk.hpp  Mesh.cpp  Mesh.hpp  Quad.cpp  Quad.hpp
src/res/shaders/: coin_fragment.glsl  coin_vertex.glsl  pbr_frag.glsl  pbr_vert.glsl  skybox_frag.glsl  stand_fragment.glsl  ui_text_fragment.glsl  ui_text_vertex.glsl
